# LangGraphAgent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
entrypoints/: api_server.py  cli.py  web_app.py
src/: __init__.py
src/adapters/: __init__.py
src/adapters/input/: __init__.py
src/adapters/input/api/: __init__.py  fastapi_adapter.py
src/adapters/input/cli/: __init__.py  cli_adapter.py
src/adapters/output/: __init__.py
src/adapters/presentation/: __init__.py  json_presenter.py  markdown_presenter.py  text_presenter.py
src/agents/api_agent/: __init__.py  graph.py  nodes.py  state.py
src/agents/common/: __init__.py  llm_factory.py
src/agents/database_agent/: __init__.py  graph.py  nodes.py  state.py
src/application/commands/: __init__.py  api_query_command.py  database_query_command.py
src/application/handlers/: __init__.py  api_query_handler.py  database_query_handler.py  protocols.py
src/application/queries/: __init__.py  query_result.py
src/application/services/: __init__.py  query_service_impl.py
src/common/: config.py  container.py
src/domain/: __init__.py
src/domain/entities/: api_endpoint.py  database_schema.py
src/domain/services/: __init__.py  data_analyzer.py  schema_analyzer.py
src/domain/value_objects/: api_credentials.py  database_connection.py  oauth2_credentials.py  query_request.py
src/ports/: __init__.py
src/ports/input/: __init__.py  query_service.py  result_presenter.py
src/ports/output/: __init__.py  api_repository.py  database_repository.py  oauth2_provider.py
(+8 files in other folders)
